--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,21 @@
 body {
 
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #8a2beb;
+    background-color: #f7786b;
     text-align: center;
 
 }
 
 h1 {
 
-    color: #4b0082;
+    color: #ffffff;
+}
+
+h2 {
+    color:#ffffff;
 }
 
 p {
 
-    color:#afeeea;
+    color:#ffffff;
 }
