--- a/styl.css
+++ b/styl.css
@@ -1,17 +1,24 @@
-body {
+div{
+    max-width: 600px;
+  height: 100px;
+}
 
+body {
+color: #000000;
     font-family: Arial, Helvetica, sans-serif;
+
     background-color: #9fd79e
+    
     
 
 }
 
 h1 {
 
-    color: #0b5841;
+    color: #003b00;
 }
 
 p {
 
-    color:#00726a;
+    color:#080a0a;
 }
