--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
 
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #f7786b;
+    background-color: #e3a5ff;
     text-align: center;
 
 }
