--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,83 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap");
+
 body {
 
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #e3a5ff;
+
+    background-color: #836faa;
     text-align: center;
 
 }
 
-h1 {
 
+* {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    left: 0;
+
+}
+
+
+.topnav {
+
+    background-color: #231a33;
+    position: fixed;
+    width: 200px;
+    height: 100%;
+    left: 0;
+    z-index: 1;
+    overflow-x: hidden;
+    top: 0;
+}
+
+.topnav a {
+
+    height: 100%;
+    width: 100%;
+    display: block;
+    color: #ffffff;
+    text-align: center;
+    padding-left: 20px;
+    text-decoration: none;
+    font-size: 16px;
+    box-sizing: border-box;
+    line-height: 50px;
+    border: #000000;
+
+
+
+}
+
+.topnav a:hover {
+
+    background-color: #ffffff;
+    color: #000000;
+
+
+}
+
+.min-sida {
+    margin-top: 25%;
+    margin-bottom: 25%;
+    line-height: 1.6;
+    padding: 10px;
+}
+main {
+    margin-left: 200px;
+}
+h1 {
+    font-family: 'Courier New', monospace;
+    color: #ffffff;
+
+}
+
+h2,
+p {
+    font-family: 'Times New Roman', serif;
     color: #ffffff;
 }
 
-h2 {
-    color:#ffffff;
-}
+button {
 
-p {
-
-    color:#ffffff;
+    outline: thick ridge #cab4ff;
 }
