--- a/styles.css
+++ b/styles.css
@@ -58,11 +58,31 @@ body {
 }
 
 .min-sida {
-    margin-top: 25%;
-    margin-bottom: 25%;
+    margin-top: 200px;
+    margin-bottom: 200px;
     line-height: 1.6;
-    padding: 10px;
+    
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: #372951;
+   
+    margin-left: 250px;
+    margin-right: 250px;
+    
+    flex-direction: row;
+    align-items: center;
+    border-style: hidden;
+    border-radius: 15px;
+    overflow: hidden;
 }
+   
+.link {
+
+    
+
+}
+
+
 main {
     margin-left: 200px;
 }
@@ -80,11 +100,26 @@ p {
 
 button {
 
+    margin-top: 25px;
+
     outline: thick ridge #cab4ff;
 }
 
 @media screen and (max-width: 600px) {
-    {
+   body {
         background-color: aqua;
     }
+}
+
+/* .min-sida {
+
+     background-color: #372951;
+   
+    margin-left: 200px;
+    margin-right: 200px;
+    
+    flex-direction: row;
+    align-items: center; 
+    
+
 }
